--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,10 @@
 github_users:
-  - torvalds
-  - alshedivat
+  # - manansuri27
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - manansuri27/CoSyn
+  - MananSuri27/Article
+  - MananSuri27/CombattingDisinformation
+  - MananSuri27/MultimodalTweetAnalysis
+  - MananSuri27/CS231n
+  - MananSuri27/TinyMLParking
