--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Manan Suri
     - name: Date of Birth
-      value: 14th March 1879
+      value: 27th March, 2002
     - name: Languages
       value: English, German
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Bachelors of Technology, Computer Engineering
+      institution: Netaji Subhas University of Technology
+      year: 2020 - Present
       description:
         - Description 1.
         - Description 2.
