--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -48,3 +48,7 @@
 "Manocha":
 - firstname: ["Dinesh"]
   url: https://www.cs.umd.edu/people/dmanocha
+
+"Shah":
+  - firstname: ["Rajiv Ratn"]
+    url: https://www.iiitd.ac.in/rajivratn
